native/crates/specular-scene/tests/snapshots/comments__a_canvas_region_draft_with_an_empty_composer.snap
---
source: crates/specular-scene/tests/comments.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
canvas page p2 700,100 400x300 r=8
screen rect 700,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p2" 700,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=700,79.5 400x20.5
screen rect 600,500 200x80 r=4 fill=#2b7fff1a
screen path M605,501 L795,501 C797.21,501 799,502.79 799,505 L799,575 C799,577.21 797.21,579 795,579 L605,579 C602.79,579 601,577.21 601,575 L601,505 C601,502.79 602.79,501 605,501 Z stroke=#2b7fffe6/2 dash=6/4
screen rect 570,588 260x31.4 r=10 fill=#ffffff stroke=#9f9fa9cc/1/inside
canvas text "Add a comment" 580,596 wrap=240 11/15.4 #9f9fa9
screen rect 580,596 1x20 fill=#18181b
