native/crates/specular-scene/tests/snapshots/comments__a_focused_badge_has_a_ring.snap
---
source: crates/specular-scene/tests/comments.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
canvas page p2 700,100 400x300 r=8
screen rect 700,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p2" 700,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=700,79.5 400x20.5
screen rect 584,484 32x32 r=16 stroke=#2b7fff/2/inside
screen rect 587,487 26x26 r=13 fill=#2b7fff stroke=#8ec5ffe6/1/inside
screen text "1" 600,500 10/10 w600 #ffffff centre middle
