native/crates/specular-scene/tests/snapshots/comments__before.snap
---
source: crates/specular-scene/tests/comments.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
canvas page p2 700,100 400x300 r=8
screen rect 700,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p2" 700,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=700,79.5 400x20.5
screen rect 120,300 120x60 r=4 fill=#ff637e0d opacity=0.5
screen path M125,301 L235,301 C237.21,301 239,302.79 239,305 L239,355 C239,357.21 237.21,359 235,359 L125,359 C122.79,359 121,357.21 121,355 L121,305 C121,302.79 122.79,301 125,301 Z stroke=#ff637eb3/2 dash=6/4 opacity=0.5
screen rect 216,148 26x26 r=13 fill=#2b7fff stroke=#8ec5ffe6/1/inside
screen text "1" 229,161 10/10 w600 #ffffff centre middle
